...
            buttonText: result.buttonText,
            completion: { [weak self] in
                guard let self else { return }
                
                self.presenter.restartGame()
            },
            accessibilityIdentifier: "Game results"
        )
        
        alertPresenter.show(in: self, model: model)
    }
}

